[package]
name = "anychain-ton"
version = "0.1.0"
edition = "2021"

[dependencies]
anychain-core = { version = "0.1.6" }
toner = "0.2.22"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
nacl = "0.5.3"
ed25519-dalek = "=1.0.1"
base64 = "0.22.1"
crc16 = "0.4.0"
hex = "0.4.3"